syntax = "proto3";

package common;

option java_package = "com.syscho.grpc.stub";

message Address {
    int32 empId = 1;
    string address1 = 2;
    string address2 = 3;
    string city = 4;
    string state = 5;
    int32 pinCode =6;
}







